# your-claude-engineer

./: .claude_settings.json  .env.example  .gitignore  .mcp.json  .project.json  AGENTS.md  CLAUDE.md  ENG-53-implementation.html  ENG-62-verification.html  ENG-66-demo.html  ENG-66-verification.html  Makefile  README.md  agent.py  autonomous_agent_demo.py  client.py  config.py  context_manager.py  docker-compose.override.yml  docker-compose.yml  gen_eng66_report.py  github_integration.py  health_check.py  heartbeat.py  mcp_config.py  preflight.py  progress.py  prompts.py  pyproject.toml  pytest.ini  recovery.py  run_server_8004.py  run_test_server.py  security.py  self_diagnostics.py  session_recorder.py  session_state.py  telegram_reports.py  test_config_datauri.py  test_config_html.py  (+11 more)
.agent/: MEMORY.md  PROJECT_MAP.md  SOUL.md
agents/: __init__.py  definitions.py
analytics_server/: server.py  sessions_router.py
backups/: backup_20260207_053156.json  backup_20260207_053322.json  backup_20260207_102304.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
prompts/: coding_agent_prompt.md  continuation_task.md  execute_task.md  initializer_task.md  orchestrator_prompt.md  planner_agent_prompt.md  reviewer_prompt.md  task_agent_prompt.md  telegram_agent_prompt.md
scripts/: backup.py  check-complexity.sh  generate_project_map.py  lint-gate.sh  serve_html.py
secrets/: .gitignore  db_password.txt.example  telegram_bot_token.txt.example  telegram_chat_id.txt.example
task_mcp_server/: .dockerignore  Dockerfile  __init__.py  admin_cli.py  database.py  (+6 more)
(+124 files in other folders)
